--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="secondary-div">
       <div id="content">
-        <div id="main-page" class="page active-page" style="justify-content: center;align-items: center;font-size:50px;font-weight:bold;color: #fff;">Попка мамонта</div>
+        <div id="main-page" class="page active-page" style="justify-content: center;align-items: center;font-size:50px;font-weight:bold;color: #fff;">Тут ничего нет</div>
         <div id="accounts-page" class="page">
           <div id="accounts-container"></div>
           <div id="accounts-save">
